# easy-photo-backup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: android.yml  rust.yml
client-cli/: Cargo.toml
client-cli/src/: cli_processor.rs  client_config.rs  client_handshake.rs  client_requests.rs  client_storage.rs  confirm_connection_request.rs  file_sender.rs  introduction_request.rs  main.rs  nsd_client.rs  request_writer.rs  send_files_request.rs  server_handshake.rs  service_address.rs
client_cli/: Cargo.toml
client_cli/src/: cli_processor.rs  client_cli_processor.rs  client_config.rs  main.rs
client_ffi/: Cargo.toml  build-ios.sh
client_ffi/client_ffi/src/: lib.rs
client_ffi/src/: lib.rs
common/: Cargo.toml
common/src/: certificate.rs  lib.rs  protocol.rs  text_config.rs
common/src/tls/: client_config.rs  tls_data.rs
server/: Cargo.toml
server-app/: Cargo.toml
server-app/src/: client_handshake.rs  file_receiver.rs  main.rs  nsd_server.rs  request_reader.rs  server_config.rs
server/src/: client_handshake.rs  digit_confirmation_ui.rs  file_receiver.rs  main.rs  nsd_server.rs  request_reader.rs  send_files_request.rs  server_cli_processor.rs  server_config.rs  server_handshake.rs  server_requests.rs  server_storage.rs  streamed_file_receiver.rs
server_digits_gui/: Cargo.toml
server_digits_gui/src/: main.rs
shared_client/: Cargo.toml
shared_client/src/: client_config.rs  client_handshake.rs  client_requests.rs  client_storage.rs  client_storage_updaters.rs  confirm_connection_request.rs  discovered_server.rs  file_change_detector.rs  file_sender.rs  file_sending_routine.rs  get_server_name_request.rs  introduction_request.rs  lib.rs  network_address.rs  nsd_client.rs  nsd_data.rs  number_entered_request.rs  pairing_processor.rs  pairing_requests.rs  send_files_request.rs  sent_files_cache.rs  service_address.rs  storage_updaters.rs  streamed_file_sender.rs
shared_common/: Cargo.toml
shared_common/bstorage_derive/: Cargo.toml
shared_common/bstorage_derive/src/: lib.rs  private.rs
shared_common/src/: bstorage.rs  lib.rs  protocol.rs  text_config.rs
shared_common/src/bstorage/: helpers.rs  mod.rs  private_functions.rs  traits.rs  traits_impl.rs  updater.rs
shared_common/src/crypto/: mod.rs
shared_common/src/tls/: approved_raw_keys.rs  client_config.rs  client_side_cert_verifier.rs  mod.rs  server_config.rs  server_side_cert_verifier.rs  tls_data.rs
target_dir/test_dir/: test_text_in_dir.txt
tools/: generate_kotlin_ffi_code.sh
uniffi-bindgen/: Cargo.toml
uniffi-bindgen-swift/: Cargo.toml
