[workspace]
members = [
    "client_cli",
    "client_ffi",
    "server",
    "server_digits_gui",
    "shared_client",
    "shared_common",
    "uniffi-bindgen",
    "uniffi-bindgen-swift",
]
resolver = "2"

[workspace.dependencies]
shared_common = { path = "./shared_common", version = "0.4.0" }
shared_client = { path = "./shared_client", version = "0.4.0" }
uniffi = { version = "0.29.0" }
rcgen = { version = "0.13.2" }
rustls = { version = "0.23.23", default-features = false, features = [ "std", "ring" ] }
rand = { version = "0.9.0", default-features = true }
