[package]
name = "client_ffi"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "easy_photo_backup_ffi_lib"

[[bin]]
name = "uniffi_bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
shared_common = { path = "../shared_common", version = "0.3.0" }
shared_client = { path = "../shared_client", version = "0.3.0" }
rustls = { version = "0.23.23", default-features = true, features = [] }
uniffi = { version = "0.29.0", default-features = true, features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.0", features = [ "build" ] }
