[package]
name = "client_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi.workspace = true
shared_common = { path = "../shared_common", version = "0.3.0" }
shared_client = { path = "../shared_client", version = "0.3.0" }
thiserror = "2.0.12"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
