[package]
name = "shared_common"
version = "0.4.0"
edition = "2021"

[dependencies]
rcgen = { workspace = true, default-features = true, features = ["pem"] }
rustls = { workspace = true }
rand = { workspace = true }
cmac = { version = "0.7.2", default-features = true }
aes = { version = "0.8.4", default-features = true }
rand_chacha = { version = "0.9.0", default-features = true }
bstorage_derive = { path = "bstorage_derive" }
